--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,7 +13,6 @@
                 android:layout_alignParentEnd="true"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
-                app:srcCompat="@drawable/img"
                 android:id="@+id/imgProfile"/>
         <ir.pepotec.app.awesomeapp.view.student.profile.ProfileHead
                 android:id="@+id/profileHead"
@@ -66,40 +65,36 @@
                     android:id="@+id/txtMyPhone"/>
         </LinearLayout>
         <LinearLayout
+                android:padding="16dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:layout_marginTop="16dp">
-            <androidx.cardview.widget.CardView
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp">
+            <com.google.android.material.button.MaterialButton
+                    android:padding="8dp"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="@color/colorAccent" android:layout_marginTop="16dp"
-                    android:layout_marginStart="16dp" android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"
-                    android:id="@+id/btnFriendListMyProfile">
-                <TextView
-                        android:drawableStart="@drawable/ic_people"
-                        android:drawablePadding="16dp"
-                        android:layout_gravity="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:padding="8dp"
-                        android:text="لیست دوستان" android:textColor="@color/dark"/>
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
+                    app:backgroundTint="@color/colorAccent"
+                    android:layout_marginEnd="8dp"
+                    android:id="@+id/btnFriendListMyProfile"
+                    android:text="لیست دوستان"
+                    android:drawableStart="@drawable/ic_people"
+                    android:textColor="@color/dark"
+            />
+            <com.google.android.material.button.MaterialButton
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="@color/colorAccent" android:layout_marginStart="8dp"
-                    android:layout_marginEnd="16dp" android:layout_marginBottom="16dp" android:layout_marginTop="16dp"
-                    android:id="@+id/btnAboutMyProfile">
-                <TextView android:layout_width="wrap_content"
-                          android:drawablePadding="16dp"
-                          android:drawableStart="@drawable/ic_person"
-                          android:layout_gravity="center"
-                          android:layout_height="match_parent"
-                          android:padding="8dp"
-                          android:text="درباره من" android:textColor="@color/dark"/>
-            </androidx.cardview.widget.CardView>
+                    app:backgroundTint="@color/colorAccent"
+                    android:layout_marginStart="8dp"
+                    android:padding="8dp"
+                    android:text="درباره من"
+                    android:id="@+id/btnAboutMyProfile"
+                    android:textColor="@color/dark"
+                    android:drawableStart="@drawable/ic_person"
+                />
+
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
