--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,7 +3,7 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layoutDirection="rtl"
                 android:layout_width="match_parent"
-                android:background="@color/backGround"
+                android:background="@color/colorPrimaryDark"
                 android:layout_height="match_parent">
 <FrameLayout
         android:id="@+id/ContentFriend"
@@ -12,6 +12,7 @@
 
 </FrameLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabActivityProfile"
             android:layout_margin="16dp"
             android:layout_alignParentBottom="true"
             app:srcCompat="@drawable/ic_add"
