--- a/app/src/main/res/layout/dialog_profile_img.xml
+++ b/app/src/main/res/layout/dialog_profile_img.xml
@@ -59,6 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             <com.google.android.material.button.MaterialButton
+                    android:layout_gravity="center"
                     android:id="@+id/btnChoseProfileImg"
                     android:textSize="@dimen/txt"
                     android:textColor="@color/dark"
