--- a/app/src/main/res/layout/fragment_confirm_phone.xml
+++ b/app/src/main/res/layout/fragment_confirm_phone.xml
@@ -79,6 +79,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
                     <TextView
+                            android:id="@+id/txtInfoConfirmPhone"
                             android:text="کد تایید لحضاتی پیش به شماره همراه 09157474087 ارسال شده است"
                             android:textSize="@dimen/txt"
                             android:drawableStart="@drawable/ic_info"
