--- a/app/src/main/res/layout/fragment_show_work_sample.xml
+++ b/app/src/main/res/layout/fragment_show_work_sample.xml
@@ -1,106 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:arr="http://schemas.android.com/tools"
+        android:layoutDirection="rtl"
+        android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layoutDirection="rtl"
 >
-
-    <ScrollView
-            android:background="@color/colorPrimaryDark"
+    <RelativeLayout
+            android:gravity="center_horizontal"
+            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
     >
-        <LinearLayout
-                android:gravity="center_horizontal"
-                android:background="@color/colorPrimary"
-                android:orientation="vertical"
+        <TextView
+                android:layout_alignParentStart="true"
+                android:id="@+id/txtAddDateWorkSample"
+                android:padding="8dp"
+                android:gravity="center"
+                android:textColor="@color/colorAccent"
+                android:text="1397/02/01"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <TextView
+                android:layout_centerHorizontal="true"
+                android:id="@+id/txtNewsWorkSample"
+                android:padding="8dp"
+                android:gravity="start|top"
+                android:textColor="@color/redLight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <TextView
+                android:layout_alignParentEnd="true"
+                android:gravity="center"
+                android:id="@+id/txtLikeNumShowWorkSample"
+                android:drawableTop="@drawable/ic_favorite"
+                android:padding="8dp"
+                android:textColor="@color/colorAccent"
+                android:text="100"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <TextView
+                android:layout_toStartOf="@+id/txtLikeNumShowWorkSample"
+                android:id="@+id/txtSeenNumShowWorkSample"
+                android:drawableTop="@drawable/ic_eye"
+                android:padding="8dp"
+                android:gravity="center"
+                android:textColor="@color/colorAccent"
+                android:text="150"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <ImageView
+                android:layout_centerHorizontal="true"
+                android:id="@+id/imgHeadShowWorkSample"
+                android:layout_below="@id/txtAddDateWorkSample"
+                app:srcCompat="@drawable/ic_work_sample"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_width="@dimen/imgBig"
+                android:layout_height="@dimen/imgBig"/>
+        <TextView
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/imgHeadShowWorkSample"
+                android:textSize="@dimen/txt"
+                android:textColor="@color/colorAccent"
+                android:text="عنوان نمونه کار"
+                android:layout_marginBottom="32dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/txtSubjectShowWorkSample"/>
+        <com.google.android.material.card.MaterialCardView
+                android:layout_below="@id/txtSubjectShowWorkSample"
+                android:backgroundTint="@color/colorPrimaryDark"
+                app:shapeAppearanceOverlay="@style/CVTopRound"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             <LinearLayout
-                    android:gravity="top"
-                    android:orientation="horizontal"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical"
+                    android:layout_marginTop="@dimen/radius"
+                    android:padding="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-            <TextView
-                    android:padding="8dp"
-                    android:gravity="start|top"
-                    android:layout_weight="1"
-                    android:textColor="@color/colorAccent"
-                    android:text="1397/02/01"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
                 <TextView
-                        android:drawableTop="@drawable/ic_favorite"
-                        android:padding="8dp"
-                        android:textColor="@color/colorAccent"
-                        android:text="100"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                <TextView
-                        android:drawableTop="@drawable/ic_eye"
-                        android:padding="8dp"
-                        android:textColor="@color/colorAccent"
-                        android:text="150"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-            </LinearLayout>
-            <ir.pepotec.app.awesomeapp.view.uses.CircularIMG
-                    app:srcCompat="@drawable/work"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/imgBig"/>
-            <TextView
-                    android:textSize="@dimen/txt"
-                    android:textColor="@color/colorAccent"
-                    android:text="عنوان نمونه کار"
-                    android:layout_marginBottom="32dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/txtSubjectShowWorkSample"/>
-            <com.google.android.material.card.MaterialCardView
-                    android:backgroundTint="@color/colorPrimaryDark"
-                    app:shapeAppearanceOverlay="@style/CVTopRound"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <LinearLayout
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:layout_marginTop="@dimen/radius"
+                        android:layout_marginBottom="16dp"
+                        android:text="توضیحات"
+                        android:background="@drawable/txt_border"
+                        android:textColor="@color/light"
+                        android:textSize="@dimen/txt"
                         android:padding="16dp"
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/txtDescriptionShowWorkSample"/>
+                <androidx.cardview.widget.CardView
+                        android:layout_marginBottom="16dp"
+                        app:cardCornerRadius="@dimen/radius"
+                        app:cardBackgroundColor="@color/colorAccent"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-                    <TextView
-                            android:layout_marginBottom="16dp"
-                            android:text="توضیحات"
-                            android:background="@drawable/txt_border"
-                            android:textColor="@color/light"
-                            android:textSize="@dimen/txt"
-                            android:padding="16dp"
+
+                    <ir.pepotec.app.awesomeapp.view.uses.CircularIMG
+                            android:layout_margin="4dp"
+                            app:rectCorner="@dimen/radius"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/txtDescriptionShowWorkSample"/>
-                <LinearLayout
-                        android:id="@+id/LLParentWorkSampleImages"
-                        android:orientation="vertical"
+                            app:srcCompat="@drawable/ic_image"
+                            android:id="@+id/img1ShowWorkSAmple"/>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                        android:id="@+id/CV2ShowWorkSample"
+                        android:visibility="gone"
                         android:layout_marginBottom="16dp"
+                        app:cardCornerRadius="@dimen/radius"
+                        app:cardBackgroundColor="@color/colorAccent"
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    <ir.pepotec.app.awesomeapp.view.uses.CircularIMG
+                            android:layout_margin="4dp"
+                            app:rectCorner="@dimen/radius"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/ic_image"
+                            android:id="@+id/img2ShowWorkSAmple"/>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                        android:id="@+id/CV3ShowWorkSample"
+                        android:visibility="gone"
+                        android:layout_marginBottom="16dp"
+                        app:cardCornerRadius="@dimen/radius"
+                        app:cardBackgroundColor="@color/colorAccent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    <ir.pepotec.app.awesomeapp.view.uses.CircularIMG
+                            android:layout_margin="4dp"
+                            app:rectCorner="@dimen/radius"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/ic_image"
+                            android:id="@+id/img3ShowWorkSAmple"/>
+                </androidx.cardview.widget.CardView>
+                <LinearLayout android:layout_width="0dp" android:layout_height="72dp"/>
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        arr:srcCompta="@drawable/ic_edit"
+                        android:id="@+id/fabShowWorkSample"
+                        android:layout_alignParentBottom="true"
+                        android:layout_margin="16dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                >
-
-                </LinearLayout>
-                    <LinearLayout android:layout_width="0dp" android:layout_height="72dp"/>
-                </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
-
+                />
+        <LinearLayout
+                android:gravity="center"
+                android:layout_alignBottom="@id/imgHeadShowWorkSample"
+                android:layout_alignTop="@id/imgHeadShowWorkSample"
+                android:layout_toStartOf="@id/imgHeadShowWorkSample"
+                android:layout_alignParentStart="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+        >
+            <ImageView
+                    android:id="@+id/imgLikeShowWorkSample"
+                    android:tint="@color/light1"
+                    app:srcCompat="@drawable/ic_favorite"
+                    android:layout_width="@dimen/img"
+                    android:layout_height="@dimen/img"
+            />
         </LinearLayout>
-    </ScrollView>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabShowWorkSample"
-            app:srcCompat="@drawable/ic_edit"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-</RelativeLayout>
+
+    </RelativeLayout>
+</ScrollView>
