--- a/app/src/main/res/layout/item_ability.xml
+++ b/app/src/main/res/layout/item_ability.xml
@@ -6,6 +6,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:gravity="center"
             android:id="@+id/fabAbility"
             style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
             app:icon="@drawable/ic_ability"
