--- a/app/src/main/res/layout/fragment_friend_list.xml
+++ b/app/src/main/res/layout/fragment_friend_list.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/RVFrienList"
-        android:background="@color/colorPrimaryDark"
         android:layoutDirection="rtl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:background="@color/colorPrimaryDark"
+        android:layout_height="match_parent"
+>
+<androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RVFrienList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+>
 </androidx.recyclerview.widget.RecyclerView>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabFriendList"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+    />
+</RelativeLayout>
