--- a/app/src/main/res/layout/item_receive_file.xml
+++ b/app/src/main/res/layout/item_receive_file.xml
@@ -26,7 +26,7 @@
                 android:layout_marginBottom="16dp"
                 android:layout_width="@dimen/img"
                 android:layout_height="@dimen/img"
-                app:srcCompat="@drawable/ic_upload"
+                app:srcCompat="@drawable/ic_download"
                 android:id="@+id/imgItemReceiveFile"
         />
         <TextView
