--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent" android:layout_height="match_parent"
         android:layoutDirection="rtl"
-        android:background="@color/backGround"
+        android:background="@color/colorPrimary"
 >
-
     <androidx.appcompat.widget.ContentFrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
+            android:id="@+id/ContentMain"/>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+            app:itemTextColor="@color/txtPrimary"
+            android:background="@color/dark"
+            app:itemIconTint="@color/txtPrimary"
+            android:id="@+id/bnvMain"
+            app:menu="@menu/menu_main"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/ContentMain">
-    </androidx.appcompat.widget.ContentFrameLayout>
-
-    <com.google.android.material.bottomappbar.BottomAppBar
-            android:layoutDirection="ltr"
-            android:backgroundTint="@color/colorPrimary"
-            app:titleTextColor="@color/light"
-            app:subtitleTextColor="@color/light"
-            android:id="@+id/barMain"
-            android:layout_gravity="bottom"
-            app:fabAlignmentMode="center"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-    </com.google.android.material.bottomappbar.BottomAppBar>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            app:layout_anchor="@id/barMain"
-            app:srcCompat="@drawable/ic_android"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
