--- a/app/src/main/res/drawable/ic_student.xml
+++ b/app/src/main/res/drawable/ic_student.xml
@@ -4,40 +4,7 @@
         android:viewportWidth="24.0"
         android:width="24dp">
     <path
-            android:strokeLineCap="round"
-            android:strokeWidth="16.1"
-            android:strokeAlpha="0.08"
-            android:strokeColor="@color/dark"
-            android:pathData="M12,12 h0.01"
-    />
-    <path
-    android:strokeLineCap="round"
-    android:strokeWidth="16"
-    android:strokeAlpha="0.2"
-    android:strokeColor="@color/dark"
-    android:pathData="M12,12.1 h0.01"
-    />
-    <path
-            android:strokeLineCap="round"
-            android:strokeWidth="16"
-            android:strokeAlpha="0.1"
-            android:strokeColor="@color/dark"
-            android:pathData="M12,12.2 h0.01"
-    />
-    <path
-            android:strokeLineCap="round"
-            android:strokeWidth="16"
-            android:strokeColor="@color/light"
-            android:pathData="M12,12 h0.01"
-    />
-    <group
-    android:pivotX="12"
-    android:pivotY="12"
-    android:scaleX="0.65"
-    android:scaleY="0.65"
-    >
-    <path
-        android:strokeWidth="0.5"
+        android:strokeWidth="1"
         android:strokeColor="@color/colorPrimaryDark"
         android:strokeLineCap="round"
         android:strokeLineJoin="round"
@@ -45,11 +12,11 @@
     />
 
     <path
-    android:strokeWidth="1"
-    android:strokeColor="@color/colorAccent"
+    android:strokeWidth="1.5"
+    android:strokeColor="@color/colorPrimaryDark"
     android:strokeLineCap="round"
-    android:pathData="M19,19.4 v0.1"
+    android:pathData="M19,19.6 v0.1"
     />
-    </group>
+
 
 </vector>
