--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -13,13 +13,15 @@
             android:id="@+id/tabLayoutStudent"
             android:layoutDirection="ltr"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+    >
 
     </com.google.android.material.tabs.TabLayout>
     <androidx.viewpager.widget.ViewPager
             android:id="@+id/VPStudent"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:layout_below="@id/tabLayoutStudent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/tabLayoutStudent"
             android:background="@color/backGround"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:visibility="gone"
