--- a/app/src/main/res/layout/content_common.xml
+++ b/app/src/main/res/layout/content_common.xml
@@ -1,8 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layoutDirection="rtl"
-             android:id="@+id/ContentCommon"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-</FrameLayout>
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layoutDirection="rtl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark"
+>
+    <FrameLayout
+            android:id="@+id/ContentCommon"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+    />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabCC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="16dp"
+            app:srcCompat="@drawable/ic_add"
+            android:visibility="gone"
+    />
+</RelativeLayout>
