--- a/app/src/main/res/layout/fragment_friend_list.xml
+++ b/app/src/main/res/layout/fragment_friend_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layoutDirection="rtl"
         android:layout_width="match_parent"
         android:background="@color/colorPrimaryDark"
@@ -15,6 +15,7 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabFriendList"
             android:layout_alignParentBottom="true"
+            app:srcCompat="@drawable/ic_add"
             android:layout_margin="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
