--- a/app/src/main/res/layout/fragment_main_lists.xml
+++ b/app/src/main/res/layout/fragment_main_lists.xml
@@ -6,7 +6,7 @@
               android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/RVHome"
+            android:id="@+id/RVMainLists"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 </LinearLayout>
