--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -17,7 +17,7 @@
             android:text="9431443"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/txtNameMessageList"
+            android:id="@+id/txtSIdMessageList"
     />
     <TextView
             android:layout_alignBottom="@id/imgProfileMessageList"
