--- a/app/src/main/res/layout/fragment_blog.xml
+++ b/app/src/main/res/layout/fragment_blog.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/btnAddMessageBlog"
                 app:srcCompat="@drawable/ic_add"
                 android:tint="@color/light"
-                android:layout_width="@dimen/img"
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/img"
         />
     </LinearLayout>
