--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -17,7 +17,7 @@
             android:text="9431443"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/txtSIdMessageList"
+            android:id="@+id/txtChatSubjectMessageList"
     />
     <TextView
             android:layout_alignBottom="@id/imgProfileMessageList"
@@ -25,18 +25,19 @@
             android:textColor="@color/txtPrimary"
             android:textSize="@dimen/txtSmall"
             android:layout_toEndOf="@id/imgProfileMessageList"
-            android:text="دیروز"
+            android:text="...."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/txtLastSeenMessageList"
     />
-    <ImageView
+    <ir.pepotec.app.awesomeapp.view.uses.CircularIMG
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="16dp"
             android:layout_width="@dimen/img"
             android:layout_height="@dimen/img"
+            app:rectCorner="@dimen/radius"
             app:srcCompat="@drawable/ic_profile_def"
             android:id="@+id/imgProfileMessageList"
     />
@@ -145,6 +146,13 @@
                     android:layout_height="wrap_content"
             />
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
+    <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/LLHeadMessageList"
+            android:layout_alignParentTop="true"
+            android:layout_above="@id/RVChatList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+    />
 </RelativeLayout>
