--- a/app/src/main/res/layout/item_student_list.xml
+++ b/app/src/main/res/layout/item_student_list.xml
@@ -10,7 +10,7 @@
     <androidx.cardview.widget.CardView
             android:layoutDirection="rtl"
             android:layout_marginBottom="0.5dp"
-            app:cardBackgroundColor="@color/colorPrimaryDark"
+            app:cardBackgroundColor="@color/dark"
             android:orientation="vertical"
             app:cardCornerRadius="@dimen/radiusVSmall"
             android:layout_width="match_parent"
@@ -30,22 +30,49 @@
             <LinearLayout
                     android:gravity="center_vertical"
                     android:orientation="vertical"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content">
+                <TextView
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:textColor="@color/light"
+                        android:padding="8dp"
+                        android:text="9431443"
+                        android:textSize="@dimen/txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/txtSIdItemStudent"/>
                 <TextView
                         android:textColor="@color/light"
                         android:padding="8dp"
                         android:text="مصطفی قنبری"
-                        android:textSize="@dimen/txt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/txtNameItemStudent"/>
-                <TextView
-                        android:textColor="@color/light"
-                        android:padding="8dp"
-                        android:text="9431443"
                         android:textSize="@dimen/txtSmall"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/txtSIdItemStudent"/>
+                        android:layout_height="wrap_content" android:id="@+id/txtNameItemStudent"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_width="wrap_content" android:layout_height="match_parent"
+                    android:orientation="vertical"
+            >
+                <ImageView
+
+                        android:id="@+id/imgSelfItemStudent"
+                        android:tint="@color/light"
+                        android:layout_width="wrap_content" android:layout_height="0dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/ic_person"
+                />
+                <TextView
+                        android:gravity="center"
+                        android:id="@+id/txtAdminItemStudent"
+                        android:layout_width="wrap_content" android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:textSize="@dimen/txtSmall"
+                        android:textColor="@color/colorAccent"
+                        android:text="ادمین"
+                />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
