--- a/app/src/main/res/layout/fragment_other_profile.xml
+++ b/app/src/main/res/layout/fragment_other_profile.xml
@@ -80,7 +80,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             <TextView
-                    android:text="حمیدامیری"
+                    android:text="مصطفی قنبری"
                     android:id="@+id/txtNameOtherProfile"
                     android:textSize="@dimen/txt"
                     android:textColor="@color/txtDark"
@@ -89,8 +89,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             <TextView
+                    android:text="مهندسی برق"
+                    android:id="@+id/txtFieldOtherProfile"
+                    android:textSize="@dimen/txt"
+                    android:textColor="@color/txtDark"
+                    android:layout_marginTop="16dp"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            <TextView
                     android:autoLink="phone"
-                    android:text="09155405034"
+                    android:text="09157474087"
                     android:id="@+id/txtPhoneOtherProfile"
                     android:textSize="@dimen/txt"
                     android:textColor="@color/txtDark"
@@ -100,7 +109,7 @@
                     android:layout_height="wrap_content"/>
             <TextView
                     android:autoLink="email"
-                    android:text="hamid945@gmail.com"
+                    android:text="godhelot1@gmail.com"
                     android:id="@+id/txtEmailOtherProfile"
                     android:textSize="@dimen/txt"
                     android:textColor="@color/txtDark"
