--- a/app/src/main/res/layout/item_receive.xml
+++ b/app/src/main/res/layout/item_receive.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="4dp"
         android:id="@+id/itemReceiveParent"
@@ -8,8 +8,23 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:gravity="end"
 >
+    <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/light"
+    >
+        <TextView
+                android:textColor="@color/txtDark"
+                android:textSize="@dimen/txt"
+                android:padding="8dp"
+                android:text="9431443"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+        />
+    </androidx.cardview.widget.CardView>
     <LinearLayout
             android:padding="8dp"
             android:id="@+id/LLDateItemReceive"
